--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <section>
   <header>
-    <h3 id="twitter">@bphillips201</h3>
-    <h1>brian phillips</h1>
+    <h3 id="twitter">@GI</h3>
+    <h1>ILESH AND GAGAN</h1>
   </header>
   
   <hr/>
@@ -11,7 +11,7 @@
     
     <div class="data">
       <div class="up-arrow data-item" id="item1">
-        <h5>Awesome Place</h5>
+        <h5>WORKPLACE</h5>
         <span>&nbsp;</span>
       </div>
       
