--- a/Cart.html
+++ b/Cart.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Cart</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Your Cart</h1>
+        <a href="index.html">Back to Products</a>
+    </header>
 
+    <section id="cart-items">
+        <h2>Your Cart is Empty</h2>
+    </section>
+
+    <footer>
+        <p>Total: <span id="total-price">$0</span></p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
