--- a/Cart.html
+++ b/Cart.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Cart</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Your Cart - Sweet Treats Bakery</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Your Cart</h1>
-        <a href="index.html">Back to Products</a>
-    </header>
+  <header>
+    <h1>Your Cart</h1>
+    <nav>
+      <a href="index.html">Back to Home</a>
+    </nav>
+  </header>
 
-    <section id="cart-items">
-        <h2>Your Cart is Empty</h2>
-    </section>
+  <section id="cart-items">
+    <h2>Items in Your Cart</h2>
+    <ul id="cart-list"></ul>
+    <h3>Total: $<span id="cart-total">0.00</span></h3>
+  </section>
 
-    <footer>
-        <p>Total: <span id="total-price">$0</span></p>
-    </footer>
-
-    <script src="script.js"></script>
+  <script src="cart.js"></script>
 </body>
 </html>
